gcc/testsuite/rust/compile/nested_macro_use2.rs
#[macro_use]
mod foo {
    fn bar() {
        macro_rules! baz {
            () => {{}};
        }
    }
}

fn main() {
    baz!(); // { dg-error "unknown macro: .baz." }
}
